# SDLCourse

./: README.md
google_table/: index.html
google_table/js/: .main.js.swp  ;  highcharts.min.js  main.js  states.js
qt/: CMakeLists.txt  main.cpp  widgets.cpp  widgets.h
xo/: server3.py  smth.html
